--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -56,7 +56,7 @@ input,
 label,
 textarea,
 select {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: a.$secondaryFont;
   font-size: 16px;
   margin: 12px 0;
   line-height: 1.6;
