--- a/sass/components/_victoriacrosses.scss
+++ b/sass/components/_victoriacrosses.scss
@@ -32,11 +32,10 @@
       position: relative;
       padding-bottom: 1rem;
       font-family: a.$primaryFont;
-
     }
 
     p {
-      font-size: 1.2rem;
+      font-size: 1rem;
       line-height: 1.6;
       color: a.$textColor;
       margin-bottom: 1.5rem;
@@ -45,32 +44,42 @@
     .image-container {
       text-align: center;
       margin-top: 2rem;
-      display: flex;
+      // display: flex;
       flex-wrap: wrap;
       gap: 1.5rem;
 
-      .vc-image {
-        flex: 0 0 calc(20% - 1.2rem);
-        max-width: 100%;
-        border-radius: 8px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        transition: transform 0.2s ease;
-        @media screen and (min-width: 768px){
-          max-width: 30%;
-
-        }
-
-        &:hover {
-          transform: scale(1.05);
-          box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
-        }
-      }
-
-      @media (max-width: 768px) {
+      .vc-image-card {
+        // flex: 0 0 calc(30% - 1.2rem);
+        text-align: center;
+        margin: 0 1rem;
         .vc-image {
-          flex: 0 0 calc(50% - 0.75rem);
+          width: 100%;
+          border-radius: 8px;
+          box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+          transition: transform 0.2s ease;
+          display: inline;
+          @media screen and (min-width: 768px) {
+            max-width: 70%;
+          }
+
+          &:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+          }
+        }
+        .caption {
+          font-size: 0.7rem;
+          font-style: italic;
+          color: #666;
+          margin-top: 0.5rem;
         }
       }
+
+      // @media (max-width: 768px) {
+      //   .vc-image-card {
+      //     // flex: 0 0 calc(50% - 0.75rem);
+      //   }
+      // }
     }
 
     .recipient-list {
@@ -85,7 +94,7 @@
           color: a.$textColor;
 
           &::before {
-            content: '';
+            content: "";
             position: absolute;
             left: 0;
             top: 0.5rem;
@@ -121,24 +130,7 @@
 
       p {
         margin-bottom: 1rem;
-        font-size: 1.1rem;
-      }
-    }
-
-    .haifa-image {
-      text-align: center;
-      margin: 2.5rem 0;
-
-      .haifa-img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 8px;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-        transition: transform 0.2s ease;
-
-        &:hover {
-          transform: scale(1.02);
-        }
+        font-size: 0.9rem;
       }
     }
   }
@@ -158,8 +150,20 @@
       }
 
       p {
-        font-size: 1.1rem;
+        font-size: 1rem;
       }
     }
+  }
+}
+
+.vc-quote {
+  font-style: italic;
+  padding: 1.5rem;
+  background: a.$lightGray;
+  border-top: 1px solid a.$gold;
+  margin-top: 2rem;
+
+  blockquote {
+    color: a.$gold;
   }
 }
