--- a/sass/components/_history.scss
+++ b/sass/components/_history.scss
@@ -3,7 +3,7 @@
 
 .history-header {
   background: linear-gradient(a.$overlayDark, a.$overlayDark),
-    url("../images/history-bg.jpg") no-repeat center center/cover;
+    url("../images/story1.jpg") no-repeat center center/cover;
 }
 
 .history-stories {
