--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,15 +1,15 @@
 @use "../abstracts" as a;
 @use "../abstracts/mixins" as m;
 
-.header {
-  min-height: 100vh;
-  width: 100%;
-  background-image: linear-gradient(a.$overlayDark, a.$overlayDark),
-    url(../images/pase-1-img-3.JPG);
-  background-position: center;
-  background-size: cover;
-  position: relative;
-}
+// .header {
+//   min-height: 100vh;
+//   width: 100%;
+//   background-image: linear-gradient(a.$overlayDark, a.$overlayDark),
+//     url(../images/pase-1-img-3.JPG);
+//   background-position: center;
+//   background-size: cover;
+//   position: relative;
+// }
 
 .text-box {
   width: 90%;
@@ -49,7 +49,7 @@
 }
 
 .sub-header {
-  height: 70vh;
+  height: 45vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -77,7 +77,7 @@
       font-weight: 200;
       margin: auto 20px;
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-      max-width: 600px;
+      // max-width: 600px;
       line-height: 1.6;
       color: a.$white;
       font-family: a.$secondaryFont;
