--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -9,7 +9,7 @@ $steel: #0f1116;       // Steel gray - represents strength and resilience
 // Neutral Colors
 $white: #FFFFFF;
 $offWhite: #F5F5F5;
-$lightGray: #E2E8F0;
+$lightGray: #f2f2f2;
 $mediumGray: #111418;
 $darkGray: #2D3748;
 
