--- a/sass/components/_victoriacrosses.scss
+++ b/sass/components/_victoriacrosses.scss
@@ -4,6 +4,11 @@
   background: linear-gradient(a.$overlayDark, a.$overlayDark),
     url("../images/victoriacrosses-bg.jpg") no-repeat center center/cover;
 }
+.content-wrapper{
+  h4{
+    color: a.$navy;
+  }
+}
 
 .victoria-crosses-main {
   padding: 4rem 2rem;
@@ -68,7 +73,7 @@
           }
         }
         .caption {
-          font-size: 0.7rem;
+          font-size: 1rem;
           font-style: italic;
           color: #666;
           margin-top: 0.5rem;
@@ -162,8 +167,12 @@
   background: a.$lightGray;
   border-top: 1px solid a.$gold;
   margin-top: 2rem;
+  
 
   blockquote {
     color: a.$gold;
+    font-size: 1.5rem;
+    line-height: 1.6;
+    font-weight: 600;
   }
 }
