--- a/sass/components/_article.scss
+++ b/sass/components/_article.scss
@@ -201,6 +201,11 @@
     .article-content {
         padding: 6rem 0;
 
+        .article-image{
+            width: 70%;
+            
+        }
+
         .article-header {
             h1 {
                 font-size: 3rem;
