--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -124,7 +124,8 @@
       border: 1px solid rgba(255, 255, 255, 0.1);
       border-radius: 6px;
       background: rgba(255, 255, 255, 0.05);
-      color: a.$white;
+      // color: a.$white;
+      color: red;
       font-size: 1rem;
       transition: all 0.2s ease;
       
